app/_components/featured/featured.module.css
@keyframes scroll {
  from {
    transform: translateX(0);
  }

  to {
    transform: translateX(-100%);
  }
}

.container {
  overflow: hidden;
  padding: 5% 0;
}

.strip {
  display: flex;
  overflow: hidden;
  width: 110%;
  padding: 60px 0;
  background: var(--color-background-100);
  transform: translate(-15px, 0) rotate(-5deg);
}

.list {
  display: flex;
}

.list.animated {
  animation: scroll var(--animation-scroll-duration, 60s) linear infinite;
}

@media (prefers-reduced-motion: reduce) {
  .list.animated {
    animation-play-state: paused !important;
  }
}

.strip:hover .list.animated {
  animation-play-state: paused;
}

.list li::before {
  content: '•';
  margin: 0 14px;
  font-size: 0.92em;
}

.list li {
  color: var(--color-text-inverse);
  white-space: nowrap;
  font-size: 1.75rem;
  font-weight: 700;
  line-height: 1.429;
}

@media screen and (max-width: 991px) {
  .strip {
    padding-top: 47px;
    padding-bottom: 47px;
  }

  .list li {
    font-size: 1.5rem;
  }
}

@media screen and (max-width: 767px) {
  .strip {
    padding-top: 38px;
    padding-bottom: 38px;
  }

  .list li {
    font-size: 1.375rem;
  }
}

@media screen and (max-width: 479px) {
  .strip {
    padding-top: 32px;
    padding-bottom: 32px;
  }

  .list li {
    font-size: 1.125rem;
  }

  .list li::before {
    font-size: 1em;
    vertical-align: middle;
  }
}

